Add recipes/lasagna.html and edit index.html
- Created recipe directory and added lasagna.html
- Edited index.html to link to lasagna.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
 
   <body>
-    <hi>Odin Recipes</hi>
+    <h1>Odin Recipes</h1>
+    <a href="recipes/lasagna.html" rel="noopener noreferrer">Lasagna</a>
 
   </body>
 </html>
