Build Meatballs page, edit index and Lasagna page
- Build meatballs.html page. Used default boilerplate from VScode. Added meatballs.jpeg
ingredients, and cooking instructions.
- Edit index to include link to new meatballs page. add links to unordered list for better
visuals
- Edit lasagna page. Ingredients heading were incorrectly tagged with 3 instead of h3.
This caused part of the tag element to be visible on the webpage. Changed tag from 3
to h3

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -25,6 +25,7 @@
       <li>¼ cup fresh parsley chopped</li> 
       <li>1 egg beaten</li> 
     </ul>
+    <h3>Cooking Instructions</h3>
     <ol>
       <li>Preheat the oven to 350°F. In a large pot of salted water, 
         boil lasagna noodles until al dente according to package 
@@ -51,7 +52,7 @@
       <li>Rest for at least 15 minutes before cutting.</li>
     </ol>
   </body>
-  
+
 </html>
 
 
