--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html" rel="noopener noreferrer">Lasagna</a>
+    <ul>
+    <li><a href="recipes/lasagna.html" rel="noopener noreferrer">Lasagna</a></li>
+    <li><a href="recipes/meatballs.html" rel="noopener noreferrer">Meatballs</a></li>
+    </ul>
 
   </body>
 </html>
