Build Cookies page, edit index page
- Build cookies.html page. Used default boilerplate from VScode. Added cookies.jpg
ingredients, and cooking instructions
- Edit index to include link to new cookies page

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-    <li><a href="recipes/lasagna.html" rel="noopener noreferrer">Lasagna</a></li>
-    <li><a href="recipes/meatballs.html" rel="noopener noreferrer">Meatballs</a></li>
+      <li><a href="recipes/lasagna.html" rel="noopener noreferrer">Lasagna</a></li>
+      <li><a href="recipes/meatballs.html" rel="noopener noreferrer">Meatballs</a></li>
+      <li><a href="recipes/cookies.html" rel="noopener noreferrer">Cookies</a></li>
     </ul>
 
   </body>
